--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "bootstrap-icons": "^1.11.3"
+        "bootstrap-icons": "^1.11.3",
+        "jquery": "^3.7.1"
     }
 }
