--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@popperjs/core": "^2.11.6",
         "axios": "^1.6.4",
         "bootstrap": "^5.2.3",
+        "jquery-ui": "^1.13.3",
         "laravel-mix": "^6.0.49",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.56.1",
