--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.5",
+        "league/flysystem-aws-s3-v3": "^3.28",
         "spatie/laravel-google-cloud-storage": "^2.3",
         "spatie/laravel-permission": "^6.9",
         "tinymce/tinymce": "^7.2"
