--- a/.env.example
+++ b/.env.example
@@ -1,64 +1,61 @@
-APP_NAME=Laravel
-APP_ENV=local
+# App Info
+APP_NAME=FABLMS
+APP_ENV=dev
 APP_KEY=
-APP_DEBUG=true
-APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_DEBUG=
+APP_URL=
+BCRYPT_ROUNDS=
 
-APP_LOCALE=en
-APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+#Locale
+APP_TIMEZONE=
+APP_LOCALE=
+APP_FALLBACK_LOCALE=
+APP_FAKER_LOCALE=
 
-APP_MAINTENANCE_DRIVER=file
-APP_MAINTENANCE_STORE=database
+#FileSystem
+FILESYSTEM_DISK=
 
-BCRYPT_ROUNDS=12
+#Maintenance
+APP_MAINTENANCE_DRIVER=
+APP_MAINTENANCE_STORE=
 
-LOG_CHANNEL=stack
-LOG_STACK=single
-LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+#Log
+LOG_CHANNEL=
+APP_LOG=
+LOG_DAILY_DAYS=
+LOG_LEVEL=
 
-SESSION_DRIVER=database
-SESSION_LIFETIME=120
-SESSION_ENCRYPT=false
-SESSION_PATH=/
-SESSION_DOMAIN=null
+#Database
+DB_CONNECTION=
+DB_HOST=
+DB_PORT=
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
-BROADCAST_CONNECTION=log
-FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
+#session
+SESSION_DRIVER=
+SESSION_LIFETIME=
+SESSION_ENCRYPT=
+SESSION_PATH=
+SESSION_DOMAIN=
 
-CACHE_STORE=database
-CACHE_PREFIX=
+#cache
+CACHE_STORE=
 
-MEMCACHED_HOST=127.0.0.1
+#Google
+GOOGLE_CLOUD_PROJECT_ID=
+GOOGLE_CLOUD_STORAGE_BUCKET=
 
-REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
+#Seeding Data
+ADMIN_USERNAME=
+ADMIN_PASSWORD=
 
-MAIL_MAILER=log
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
-
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
-
-VITE_APP_NAME="${APP_NAME}"
+#S3 Data
+S3_ENDPOINT=
+S3_ACCESS_KEY=
+S3_SECRET=
+S3_REGION=
+S3_BUCKET=
+S3_BASE_URL=
