--- a/composer.json
+++ b/composer.json
@@ -57,7 +57,8 @@
         ],
         "post-install-cmd": [
             "chmod -R 755 bootstrap\/cache",
-            "php artisan cache:clear"
+            "php artisan optimize:clear",
+            "php artisan optimize"
         ]
     },
     "extra": {
