--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "halestar/laravel-drop-in-cms": ">=0.7.5",
         "laravel/framework": "^12.0",
         "laravel/reverb": "^1.0",
+        "laravel/scout": "^10.14",
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.5",
         "league/flysystem-aws-s3-v3": "^3.28",
