--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "google/apiclient": "^2.18",
         "halestar/dicms-blogger": ">=0.7.5",
         "halestar/laravel-drop-in-cms": ">=0.7.5",
+        "hashids/hashids": "^5.0",
         "laravel/framework": "^12.0",
         "laravel/reverb": "^1.0",
         "laravel/scout": "^10.14",
