Quick save of my code for machine transfer.

--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,9 @@
         "barryvdh/laravel-debugbar": "^3.13",
         "barryvdh/laravel-ide-helper": "^3.6",
         "fakerphp/faker": "^1.23",
+        "halestar/dicms-blogger": "^0.7.5",
+        "halestar/fablms-google-integrator": "^0.1.2",
+        "halestar/laravel-drop-in-cms": "^0.7.5",
         "laravel/pail": "^1.2",
         "laravel/pint": "^1.13",
         "mockery/mockery": "^1.6",
