--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.3",
+        "google/apiclient": "^2.18",
+        "halestar/dicms-blogger": "^0.7.5",
+        "halestar/fablms-google-integrator": "^0.2",
+        "halestar/laravel-drop-in-cms": "^0.7.5",
         "hashids/hashids": "^5.0",
         "intervention/image": "^3.11",
         "lab404/laravel-impersonate": "^1.7",
@@ -23,27 +27,13 @@
         "tinymce/tinymce": "^7.8"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.13",
-        "barryvdh/laravel-ide-helper": "^3.6",
         "fakerphp/faker": "^1.23",
-        "google/apiclient": "^2.18",
-        "halestar/fablms-google-integrator": "@dev",
-        "laravel/boost": "^1.8",
         "laravel/pail": "^1.2",
         "laravel/pint": "^1.13",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.0",
-        "phpunit/phpunit": "^11.0.1",
-        "prism-php/prism": "^0.98.0",
-        "prism-php/relay": "^1.3",
-        "tomasvotruba/lines": "^1.2"
+        "phpunit/phpunit": "^11.0.1"
     },
-    "repositories": [
-      {
-        "type": "path",
-        "url" : "../packages/halestar/FabLmsGoogleIntegrator"
-      }
-    ],
     "autoload": {
         "psr-4": {
             "App\\": "app/",
@@ -54,8 +44,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/",
-            "halestar\\FabLmsGoogleIntegrator\\": "../packages/halestar/FabLmsGoogleIntegrator/src"
+            "Tests\\": "tests/"
         }
     },
     "scripts": {
@@ -78,12 +67,16 @@
             "chmod -R 755 bootstrap\/cache",
             "php artisan optimize:clear",
             "php artisan optimize"
-        ]
+        ],
+        "pre-autoload-dump": "Google\\Task\\Composer::cleanup"
     },
     "extra": {
         "laravel": {
             "dont-discover": []
-        }
+        },
+        "google/apiclient-services": [
+          "Drive"
+        ]
     },
     "config": {
         "optimize-autoloader": true,
